 5. Close mobile volume control 10s econds after last change.
 6. Handle nextWindow="refresh"
 7. Use toast for some command response messages.
 8. If clicked items action is a ["...", "items"] action then send a list
    request, i.e. ["...", "items", 0, 100, ...]
 9. Add 'More' action to genres.
10. Make sleep timer options accessible via long press on play/pause buttons.

0.2.8
-----
1. Use pointer style for grid items, to indicate they are clickable.
2. When updating steam meta-data for current queue item, use its "playlist
   index" to update correct item.
3. Only show duration if greater than 0.
4. Only use semi-transparent time progress for mobile and large desktop views.
5. Don't lock webapp orientation to portrait.
6. Use bold font for title of current playqueue item.

0.2.7
-----
1. Fix 'Random Albums' icon when using categories from server.
2. Fix SVG icon sizes.
3. Fix radio browsing - don't treat items with 'addAction' and no type as 'text'
4. Fix large pin icon when browsing radio.

0.2.6
-----
 1. Fix pin icon missing from menus.
 2. Use radio URL as its ID when pinning.
 3. Allow all radio sections to be pinned.
 4. Limit text (album, or artist) in grid to 80 characters, and add '...' if
    longer.
 5. Show volume level under button in mobile toolbar.
 6. Show 'More' action in more cases.
 7. Fix double-presses occurring on volume buttons with touch devices.
 8. Fix restoring command when go back.
 9. Only check for wide layout if landscape - otherwise controls are sometimes
    missing.
10. Respect 'nextWindow' when clicking on a 'text' action.
11. Darker bottom navbar for dark mobile layout.
12. Semi-transparent time progress background.
13. If group players plugin is not enabled, then add 'Synchronise' to players
    menu in toolbar.
14. Use same font-size for browse header entries ('My Music', etc) as for
    regular items.
15. Try to add consistent padding to dialogs.
16. In light style, make list icons as dark as menu icons.